# stvk

./: CMakeLists.txt  StVK.h  StVKArcSim.h  main.cc  obj_file.cc  obj_file.h  tri_mesh.cc  tri_mesh.h  types.h
